# content-fabric

./: .cursorignore  .cursorrules  .env.prod.example  .gitignore  .reauth_howto.md  CLI_USAGE.md  COMMANDS_WORKING.md  DESIGN_DOC.md  DOCS_INDEX.md  GEMINI.md  INSTALL_WEIGHTS_MODEL.sh  PROJECT_STRUCTURE.md  QUICK_MYSQL_SETUP.md  README.md  REAUTH_README.md  RUSSIAN_STRESS_README.md  SECURITY.md  SERVER_START_GUIDE.md  STRESS_FEATURE_SUMMARY.md  TASK_MANAGEMENT_SUMMARY.md  TECHNICAL_DOCS.md  TOKEN_FIX_SUMMARY.md  VOICE_CHANGER.md  VOICE_CHANGER_GUIDE.md  account_manager.py  add_youtube_channel.py  check_publishing_consoles.py  check_refresh_tokens.py  check_token_limit.py  check_token_status.py  check_why_reauth_not_working.py  config.env.example  config.yaml  docker-compose.yml  example_multiple_accounts.py  example_usage.py  latest_errors_tasks+acc_cred+channels.sql  main.py  manage_subscribers.py  migrate_to_db.py  (+29 more)
.cursor/: OVERVIEW.md  README.md  UPDATE_SUMMARY.md  architecture.md  project_description.md  quick-reference.md  rules  work_rules.md
app/: auto_poster.py  main.py  scheduler.py  task_worker.py
config/: config.yaml  env_template.txt  mysql_config.yaml  mysql_schema.sql
core/: __init__.py
core/cpp/video/: CMakeLists.txt
core/cpp/video/configs/: watermark_sora.json
core/cpp/video/src/: main.cpp
core/cpp/video/src/adapters/: FfmpegAdapter.cpp  SubtitleAdapter.cpp
core/cpp/video/src/cli/: ArgsParser.cpp
core/cpp/video/src/core/: JobManager.cpp  JobManager.hpp  VideoContext.hpp  VideoPipelineEngine.hpp
core/cpp/video/src/operations/: IVideoOperation.hpp  SubtitleTranslateOperation.hpp  WatermarkRemoveOperation.hpp
core/cpp/video/tests/: IntegrationWorkflowTests.cpp
data/: telegram_subscribers.json
database/: DEPLOYMENT.md
deploy/: logrotate-cff
docker/: .env.example  docker-compose.yml
docs/: ARCHITECTURE.md  BACKGROUND_PRESERVATION_GUIDE.md  DOCKER_MYSQL_SETUP.md  GOOGLE_CONSOLES_PUBLISHING.md  INSTALL_RVC.md  LOCAL_DEVELOPMENT.md  MIGRATION_REPORT.md  MULTIPROCESSING_FIX.md  OBSERVABILITY.md  PLATFORM_SETUP_GUIDE.md  PORTAL_GUIDE.md  PROD_README.md  REAUTH_GUIDE.md  REPORT_DEV.md  REPORT_PMA.md  SECURITY.md  SOVITS_INTEGRATION_COMPLETE.md  TASK_MANAGEMENT_SUMMARY.md  TESTING_VOICE_CHANGER.md  TOKEN_FIX_SUMMARY.md  VOICE_CHANGER.md  VOICE_CHANGER_FILE_STRUCTURE.md  VOICE_CHANGER_FINAL.md  VOICE_CHANGER_QUICK_START.md  VOICE_CHANGER_SUMMARY.md  WORKING_RVC_MODELS.md  YII_FULL_BREAKDOWN.md  YII_MIGRATION_COMPLETE.md  YII_OVERVIEW.md  YOUTUBE_DATABASE_GUIDE.md  api_schema.drawio
examples/: russian_stress_example.py  voice_changer_example.py
legacy/: DOCS_INDEX.md  Makefile  README.md  SECURITY.md  add_group.py  check_publishing_consoles.py  check_reauth_results.py  check_refresh_token_validity.py  check_why_reauth_not_working.py  run_setup_database.py  run_task_manager.py  run_task_worker.py  run_voice_changer.py  test_error_saving.py  test_reauth_quick.py  test_reauth_telegram_notifications.py  test_token_revocation_auto_reauth.py
prod/: .env.example  Dockerfile  docker-compose.yml  main.py  nginx-content-fabric.conf.example  requirements-test.txt  requirements.txt
queries/: Query.sql  Query_3.sql  Query_4.sql  Query_6.sql
scheduler/: run.py
scripts/: account_manager.py  add_custom_model.py  compare_yii_cff_data.py  daily_report_scheduler.py  dle_failure_monitor.py  dle_probe.py  migrate_prod_to_local.py  setup_database.py  streams_deeptest.py  (+5 more)
(+604 files in other folders)
